Fix centering of title on mobile Custom scrollbar

--- a/portfolio/css/freelancer.css
+++ b/portfolio/css/freelancer.css
@@ -4,6 +4,22 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+/* Style webkit scrollbar */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    margin-right: 3px;
+    background-color: #2C3E50;
+}
+
 ::-moz-selection {
     /* Code for Firefox */
     background: #86a9d3;
@@ -161,11 +177,13 @@ header .intro-text .skills {
     color: #FF7E09;
 }
 
-.navbar-brand {
-    padding-top: 12px;
-}
 
 @media (min-width: 768px) {
+
+    .navbar-brand {
+        padding-top: 12px;
+    }
+
     .navbar-fixed-top {
         padding: 25px 0;
         -webkit-transition: padding .3s;
